# tfe24-2

exercise-006/: CMakeLists.txt  main.cpp
exercise-006/include/: point.hpp  point_fmt.hpp
exercise-006/tests/: 001-TestCase.cpp
exercise-010/: CMakeLists.txt  main.cpp  myvector.cpp  myvector.hpp
exercise-010/tests/: 001-TestCase.cpp  CMakeLists.txt
